// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VotesHeader should render a different title if on select delegate step 1`] = `
<DocumentFragment>
  <section
    class="flex h-13 w-full items-center justify-between border-b border-theme-secondary-100 bg-theme-secondary-100 py-1.5 px-8 dark:border-black dark:bg-black"
  >
    <h1
      class="mb-0 text-lg"
    >
      Select a Delegate
    </h1>
    <div
      class="flex items-center text-theme-primary-200"
    >
      <div
        class="relative -my-2"
        data-testid="HeaderSearchBar"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-1wz6bm9"
            type="button"
          >
            <div
              class="flex h-5 items-center gap-3"
            >
              <span
                class="hidden md:block"
              >
                Search
              </span>
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  magnifying-glass.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <span
        class="mx-0.5 flex md:mx-3.5"
      >
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
      </span>
      <div
        data-testid="Votes__FilterWallets"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="group"
            >
              <button
                class="ring-focus -mr-2.5 px-2.5 css-m64h4t"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    sliders-vertical.svg
                  </svg>
                </div>
              </button>
            </div>
          </span>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`VotesHeader should render responsive (md) 1`] = `
<DocumentFragment>
  <div
    class="border-theme-secondary-300 dark:border-theme-secondary-800 hasBorder css-835596"
  >
    <div
      class="mx-auto px-8 md:px-10 lg:container"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            My Votes
          </h1>
          <div
            class="flex items-center text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Manage your cryptoasset staking.
          </div>
        </div>
        <div>
          <div
            class="flex items-center text-theme-primary-200"
          >
            <div
              class="relative -my-2"
              data-testid="HeaderSearchBar"
            >
              <div
                class="group"
              >
                <button
                  class="ring-focus css-1wz6bm9"
                  type="button"
                >
                  <div
                    class="flex h-5 items-center gap-3"
                  >
                    <span
                      class="hidden md:block"
                    >
                      Search
                    </span>
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg>
                        magnifying-glass.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <span
              class="mx-0.5 flex md:mx-3.5"
            >
              <div
                class="border-theme-secondary-300 dark:border-theme-secondary-800 css-ggzzh6"
                type="vertical"
              />
            </span>
            <div
              data-testid="Votes__FilterWallets"
            >
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group"
                  >
                    <button
                      class="ring-focus css-1wz6bm9"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sliders-vertical.svg
                        </svg>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesHeader should render responsive (xs) 1`] = `
<DocumentFragment>
  <section
    class="flex h-13 w-full items-center justify-between border-b border-theme-secondary-100 bg-theme-secondary-100 py-1.5 px-8 dark:border-black dark:bg-black"
  >
    <h1
      class="mb-0 text-lg"
    >
      My Votes
    </h1>
    <div
      class="flex items-center text-theme-primary-200"
    >
      <div
        class="relative -my-2"
        data-testid="HeaderSearchBar"
      >
        <div
          class="group"
        >
          <button
            class="ring-focus css-1wz6bm9"
            type="button"
          >
            <div
              class="flex h-5 items-center gap-3"
            >
              <span
                class="hidden md:block"
              >
                Search
              </span>
              <div
                class="css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  magnifying-glass.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <span
        class="mx-0.5 flex md:mx-3.5"
      >
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
      </span>
      <div
        data-testid="Votes__FilterWallets"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="group"
            >
              <button
                class="ring-focus -mr-2.5 px-2.5 css-m64h4t"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    sliders-vertical.svg
                  </svg>
                </div>
              </button>
            </div>
          </span>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
